2011-08-11  Mark Rowe  <mrowe@apple.com>

        Fix sunspider-compare-results to default to the same suite version as the sunspider script.

        Rubber-stamped by Maciej Stachowiak.

        * sunspider-compare-results:

2011-07-02  Maciej Stachowiak  <mjs@apple.com>

        Update SunSpider versioning to 1.0
        https://bugs.webkit.org/show_bug.cgi?id=63870

        Reviewed by Dan Bernstein.

        * hosted/sunspider.html:
        * hosted/versions.html:
        * resources/driver-TEMPLATE.html:
        * resources/results-TEMPLATE.html:
        * sunspider:

2011-07-02  Maciej Stachowiak  <mjs@apple.com>

        Sunspider 0.9.1 harness doesn't actually close() its test documents
        https://bugs.webkit.org/show_bug.cgi?id=47045

        Reviewed by Daniel Bates.

        * hosted/versions.html:
        * resources/driver-TEMPLATE.html:

2011-07-02  Maciej Stachowiak  <mjs@apple.com>

        Not Reviewed. 
        
        Fix obviou typo in previous commit.

        * tests/sunspider-1.0/bitops-bitwise-and.js:

2011-07-02  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Anders Carlsson.

        SunSpider: all four bitops benchmarks can be replaced with NOP
        https://bugs.webkit.org/show_bug.cgi?id=38446

        * tests/sunspider-1.0/bitops-3bit-bits-in-byte.js:
        (TimeFunc): Save the result.
        * tests/sunspider-1.0/bitops-bits-in-byte.js:
        (TimeFunc): Save the result.
        * tests/sunspider-1.0/bitops-bitwise-and.js: More explicitly
        save the results.
        * tests/sunspider-1.0/bitops-nsieve-bits.js:
        (sieve): Save the result.

2011-07-02  Maciej Stachowiak  <mjs@apple.com>

        SunSpider: string-validate-input.js uses an undeclared variable named 'name', which is a DOM API
        https://bugs.webkit.org/show_bug.cgi?id=60937

        Reviewed by Dan Bernstein.

        * tests/sunspider-1.0/string-validate-input.js:
        (doTest): Rename the variable to username
